fixed 360 spin and 720 spin preload:'visible' bugs

--- a/src/css/_viewer.scss
+++ b/src/css/_viewer.scss
@@ -495,3 +495,10 @@ body {
 .amp-viewer-kit .amp-slide .video-js .vjs-big-play-button {
   transition: all 0s;
 }
+
+
+.amp-inner-spinset{
+  .amp-progress-indicator{
+    display:none;
+  }
+}
